LV 3 중복 코드 수정, 가독성 향상 코드 수정